# quactography

./: .gitignore  README.md  grid_with_obstacles_Dijkstra.py  setup.cfg  todo.txt
data/: README  references.bib
data/test_graphs/: 11_edges_chordal_star_graph.npz  13_edges_chordal_originFrom2_graph.npz  13_edges_chordal_square_graph.npz  13_edges_rand_graph.npz  5_edges_rand_graph.npz  9_edges_chordal_hexagon_graph.npz  see_data.ipynb  weighted_10_edges_rand_graph.npz  weighted_11_edges_chordal_star_graph.npz  weighted_13_edges_chordal_originFrom2_graph.npz  weighted_13_edges_chordal_square_graph.npz  weighted_8_edges_rand_graph.npz  weighted_9_edges_chordal_hexagon_graph.npz
docs/: demo_qaoa_optimization.rst
pytest/: test_hamiltonian.py
pytest/adj_matrix/: test_filter.py  test_reconst.py
pytest/scripts/: test_quac_matrix_adj_build.py  test_quac_rndmat_adj_build.py
quactography/adj_matrix/: filter.py  io.py  reconst.py
quactography/classical/: io.py
quactography/graph/: filter.py  graph_with_connexions.py  reconst.py  undirected_graph.py  utils.py
quactography/hamiltonian/: check_hamiltonian_terms_one_by_one.py  hamiltonian_qubit_edge.py  hamiltonian_qubit_node.py  hamiltonian_qubit_node_const.ipynb  hamiltonian_total.py  test.ipynb  validate.py
quactography/image/: utils.py
quactography/solver/: Dijkstra  classical_solver.py  io.py  multiprocess_solver.py  optimization_loops.py  qaoa_multiprocess_solver.py  qaoa_solver.py  qaoa_solver_qu_edge.py  qaoa_solver_qu_node.py  rap_tracking.py  track_from_scilpy.py  vqe_solver_test.ipynb
quactography/visu/: dist_prob.py  dist_prob_edge.py  (+8 more)
scripts/: 10_edges_rand_graph.npz  1_1_build_kdegre_subgraph.py  1_build_adj_matrix.py  1_build_random_adj_matrix.py  2_draw_adj_matrix.py  2_draw_random_adj_matrix.py  3_find_max_intensity_diffusion_path.py  4_plot_distribution_probabilities.py  5_plot_optimal_paths.py  6_plot_cost_landscape.py  build_adj_matrix.py  build_graph.py  build_random_adj_matrix.py  build_random_matrix.py  classical_shortest_path_finder.py  demo.ipynb  demo.sh  demo_hamiltonian_const.ipynb  demo_qaoa_optimization.rst  draw_adj_matrix.py  draw_graph.py  draw_random_adj_matrix.py  draw_random_matrix.py  find_max_intensity_diffusion_path.py  find_shortest_path.py  generate_random_grids.py  kdegree_graph.ipynb  params_found_while_opt.txt  params_iterations.txt  plot_distribution_probabilities.py  plot_optimal_paths.py  quac_heatmap_rep_alpha.py  quac_histogram_comparison.py  quac_histogram_plot.py  quac_matrix_adj_build.py  quac_matrix_adj_draw.py  quac_optimal_path_find_max_intensity_diffusion.py  quac_optimal_paths_plot.py  quac_params_comparison.py  quac_randmatrix_adj_build.py  (+3 more)
(+19 files in other folders)
