[metadata]
name = quactography
version = 0.0.1

[options]
packages =
    quactography
    scripts
install_requires =
    dipy==1.7.*
    matplotlib==3.6.*
    networkx==3.2.*
    nibabel==4.0.*
    numpy==1.23.*
    scipy==1.11.*

[options.entry_points]
console_scripts =
    build_adj_matrix.py = scripts.build_adj_matrix:main
    draw_adj_matrix.py = scripts.draw_adj_matrix:main
    build_random_adj_matrix.py = scripts.build_random_adj_matrix:main
    draw_random_adj_matrix.py = scripts.draw_random_adj_matrix:main
    find_max_intensity_diffusion_path.py = scripts.find_max_intensity_diffusion_path:main
    plot_distribution_probabilities.py = scripts.plot_distribution_probabilities:main
    plot_optimal_paths.py = scripts.plot_optimal_paths:main

