[metadata]
name = quactography
version = 0.0.1

[options]
packages =
    quactography
    scripts
install_requires =
    dipy==1.7.*
    matplotlib==3.6.*
    networkx==3.2.*
    nibabel==4.0.*
    numpy==1.23.*
    scipy==1.11.*
    qiskit==0.34.*
    qiskit-visualization==0.2.*

[options.entry_points]
console_scripts =
    1_build_adj_matrix.py = scripts.build_adj_matrix:main
    2_draw_adj_matrix.py = scripts.draw_adj_matrix:main
    1_build_random_adj_matrix.py = scripts.build_random_adj_matrix:main
    2_draw_random_adj_matrix.py = scripts.draw_random_adj_matrix:main
    3_find_max_intensity_diffusion_path.py = scripts.find_max_intensity_diffusion_path:main
    4_plot_distribution_probabilities.py = scripts.plot_distribution_probabilities:main
    5_plot_optimal_paths.py = scripts.plot_optimal_paths:main
    demo.ipynb = scripts.demo:main
    demo_hamiltonian_const.ipynb = scripts.demo_hamiltonian_const:main
    demo.sh = scripts.demo:main
    

