[metadata]
name = quactography
version = 0.0.1

[options]
packages =
    quactography
    scripts
    data
install_requires =
    dipy==1.10.*
    matplotlib==3.6.*
    networkx==3.4.*
    nibabel==5.2.*
    numpy==1.25.*
    scipy==1.11.*
    qiskit==1.1.1 
    rustworkx>=0.12


[options.entry_points]
console_scripts =
    quac_histogram_plot.py = scripts.quac_histogram_plot:main
    quac_matrix_adj_build.py = scripts.quac_matrix_adj_build:main
    quac_matrix_adj_draw.py = scripts.quac_matrix_adj_draw:main
    quac_optimal_path_find_max_intensity_diffusion.py = scripts.quac_optimal_path_find_max_intensity_diffusion:main
    quac_optimal_paths_plot.py = scripts.quac_optimal_paths_plot:main
    quac_randmatrix_adj_build.py = scripts.quac_randmatrix_adj_build:main
    quac_randmatrix_adj_draw.py = scripts.quac_randmatrix_adj_draw:main
   
    

